@@ -1,3 +1,8 @@
+2009-12-03  Sanel <karijes@users.sourceforge.net>
+
+	* src/tinyscheme/scheme.c: dump {} tokens; fixed so [] tokens can be
+	aliased with ()
+
 2009-12-02  Sanel <karijes@users.sourceforge.net>
 
 	* configure.in:
